test/js/node/test/parallel/test-stream-pipeline-async-iterator.js.log.txt
140 |     }
141 |   }
142 | }
143 | function pipeline(...streams) {
144 |   return pipelineImpl(streams, once(popCallback(streams)));
145 | function pipelineImpl(streams, callback, opts) {
                           ^
TypeError: AsyncIterable or Promise
 code: "ERR_INVALID_RETURN_VALUE"

      at pipelineImpl (internal:streams/pipeline:145:22)
      at node:stream/promises:8:23
      at new Promise (1:11)
      at pipeline (node:stream/promises:7:18)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-async-iterator.js:19:20
      at asyncFunctionResume (1:11)
      at run (/Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-async-iterator.js:9:22)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-async-iterator.js:31:1
AssertionError: Expected "actual" to be reference-equal to "expected":
+ actual - expected

+ [TypeError: iterator.setEncoding is not a function. (In 'iterator.setEncoding("utf8")', 'iterator.setEncoding' is undefined)] {
- [Error: kaboom] {
    originalColumn: 25,
+   originalLine: 19
-   originalLine: 6
  }
 code: "ERR_ASSERTION"

      at processTicksAndRejections (native:7:39)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
